WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253277
bufferedchange event should be fired whenever eviction occurs.
https://bugs.webkit.org/show_bug.cgi?id=253277
Summary
bufferedchange event should be fired whenever eviction occurs.
Jean-Yves Avenard [:jya]
Reported
2023-03-02 15:47:58 PST
Per MediaSource spec, when calling SourceBuffer.appendBuffer eviction can occurs during the prepare append algorithm [1] If eviction occurs at this time, a `bufferedchange` event should be fired on the SourceBuffer object. [1]
https://w3c.github.io/media-source/#dfn-prepare-append
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-03-02 15:48:16 PST
<
rdar://problem/106168510
>
Jean-Yves Avenard [:jya]
Comment 2
2023-03-05 19:37:38 PST
Pull request:
https://github.com/WebKit/WebKit/pull/11095
EWS
Comment 3
2023-03-06 02:37:05 PST
Committed
261263@main
(b76e6ffa9afd): <
https://commits.webkit.org/261263@main
> Reviewed commits have been landed. Closing PR #11095 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug