bufferedchange event should be fired whenever the buffered range change. https://bugs.webkit.org/show_bug.cgi?id=253277 rdar://106168510

Reviewed by Eric Carlson.

We emit the event whenever the buffered range changes.
We re-use the infrastructure of SourceBufferPrivate's sourceBufferPrivateBufferedDirtyChanged

* LayoutTests/media/media-source/media-managedmse-bufferedchange-expected.txt: Added.
* LayoutTests/media/media-source/media-managedmse-bufferedchange.html: Added.
* Source/WebCore/Modules/mediasource/SourceBuffer.cpp:
(WebCore::SourceBuffer::sourceBufferPrivateBufferedDirtyChanged):
(WebCore::SourceBuffer::memoryPressure):
* Source/WebCore/platform/graphics/SourceBufferPrivate.cpp:
(WebCore::SourceBufferPrivate::memoryPressure):
* Source/WebCore/platform/graphics/SourceBufferPrivate.h:
* Source/WebKit/GPUProcess/media/RemoteSourceBufferProxy.cpp:
(WebKit::RemoteSourceBufferProxy::memoryPressure):
* Source/WebKit/WebProcess/GPU/media/SourceBufferPrivateRemote.cpp:
(WebKit::SourceBufferPrivateRemote::memoryPressure):
* Source/WebKit/WebProcess/GPU/media/SourceBufferPrivateRemote.h:

Canonical link: https://commits.webkit.org/261263@main